syntax = "proto3";
package tutorialproto;

message MessageReq {
  string body = 1;
}

message MessageResp {
  string body = 1;
}

service ChatService {
  rpc TestHello(MessageReq) returns (MessageResp) {}
}
